<resources>
    <string name="app_name">QaziPublicSchool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirn_pass">Confirm Password</string>
    <string name="logout">Are You Sure You Want To Logout</string>
    <string name="btn_logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="share_our_app">Share Our App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="verion_1_1">Verion 1.1</string>
    <string name="loading">Loading...</string>
    <string name="empty_computerId">Please Enter your Computer ID</string>
    <string name="empty_password">Please Enter your Password</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="subjects">Subjects</string>
    <string name="notice_board">Notice Board</string>
    <string name="more">More</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="log">Logout</string>
    <string name="no_internet">No Internet Connection. Please check your internet connection and try again</string>

    <string-array name="nav_drawer_labels">
        <item>@string/subjects</item>
        <item>@string/notice_board</item>
        <item>@string/change_password</item>
        <item>@string/log</item>
        <item>@string/privacy_policy</item>
    </string-array>

</resources>