<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/subjects" />
    <item
        android:id="@+id/navigation_Notice_board"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/notice_board" />

    <item
        android:id="@+id/navigation_more"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/navigation_ChangePassword"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/change_password" />

            <item
                android:id="@+id/navigation_logout"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="Logout" />

            <item
                android:id="@+id/navigation_privacy"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/navigation_version"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/version_1_0" />
        </menu>
    </item>
</menu>