<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onMoreClick"
            type="com.infotech4It.qazipublicschool.fragments.MoreFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MoreFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/colorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="More Setting"
                android:textAlignment="center"
                android:textSize="@dimen/medium_large"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtChangePassword"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/change_password"
            android:gravity="center|start"
            android:textSize="@dimen/medium"
            android:onClick="@{(view)->onMoreClick.onClick(view)}"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:background="@color/light_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChangePassword" />

        <TextView
            android:id="@+id/txtLogout"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:text="@string/btn_logout"
            android:gravity="center|start"
            android:textSize="@dimen/medium"
            android:onClick="@{(view)->onMoreClick.onClick(view)}"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/txtChangePassword"
            app:layout_constraintStart_toStartOf="@+id/txtChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/txtChangePassword" />

        <TextView
            android:id="@+id/txtPrivacyPolicy"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:text="@string/privacy_policy"
            android:gravity="center|start"
            android:textSize="@dimen/medium"
            android:onClick="@{(view)->onMoreClick.onClick(view)}"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/txtChangePassword"
            app:layout_constraintStart_toStartOf="@+id/txtChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/txtLogout" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:text="@string/verion_1_1"
            android:gravity="center|start"
            android:textSize="@dimen/medium"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="@+id/txtChangePassword"
            app:layout_constraintStart_toStartOf="@+id/txtChangePassword"
            app:layout_constraintTop_toBottomOf="@+id/txtPrivacyPolicy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>