<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onChangePasswordClick"
            type="com.infotech4It.qazipublicschool.view.activities.ChangePasswordActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.ChangePasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@color/colorDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:gravity="center"
                android:text="@string/change_password"
                android:textSize="@dimen/medium_large"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                android:onClick="@{(view)->onChangePasswordClick.onClick(view)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/new_password_logo" />

        <EditText
            android:id="@+id/edtOldPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="@string/old_password"
            android:background="@drawable/rounder_field"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/small_medium"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            />

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/rounder_field"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/small_medium"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/new_password"
            app:layout_constraintEnd_toEndOf="@+id/edtOldPassword"
            app:layout_constraintStart_toStartOf="@+id/edtOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtOldPassword" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/confirn_pass"
            android:background="@drawable/rounder_field"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/small_medium"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/txtNewPassword"
            app:layout_constraintStart_toStartOf="@+id/txtNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtNewPassword" />

        <TextView
            android:id="@+id/btnChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/change_password"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:textSize="@dimen/medium_large"
            android:onClick="@{(view)->onChangePasswordClick.onClick(view)}"
            android:textColor="@android:color/white"
            android:fontFamily="@font/avenir_heavy"
            android:background="@drawable/rect_bg"
            app:layout_constraintEnd_toEndOf="@+id/edtConfirmPassword"
            app:layout_constraintStart_toStartOf="@+id/edtConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>